# stag

./: .gitignore  CMakeLists.txt  ColorPalette.cpp  ColorPalette.h  CommonClasses.cpp  CommonClasses.h  CurvatureCornerDetection.cpp  CurvatureCornerDetection.h  Decoder.cpp  Decoder.h  Drawer.h  EDInterface.cpp  EDInterface.h  EDMarkers.cpp  EDMarkers.h  Ellipse.h  Marker.cpp  Marker.h  MarkerIDs.h  PoseRefiner.cpp  PoseRefiner.h  Quad.cpp  QuadDetector.h  README.md  Stag.cpp  Stag.h  main.cpp
include/stag/: StagMarkers.h
ref/marker generator/: EDMarker Generator.csproj  Form1.Designer.cs  Form1.cs  HD11.txt  HD13.txt  HD15.txt  HD17.txt  HD19.txt  HD21.txt  HD23.txt  Program.cs  README.md
ref/marker generator/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: Decoder.cpp  Decoder.h  Drawer.cpp  Drawer.h  EDInterface.cpp  EDInterface.h  Ellipse.cpp  Ellipse.h  Marker.cpp  Marker.h  MarkerIDs.h  PoseRefiner.cpp  PoseRefiner.h  Quad.cpp  Quad.h  QuadDetector.cpp  QuadDetector.h  Stag.cpp  Stag.h  StagMarkers.cpp  StagMarkers.h  colors.h  stag_markers.cpp  stag_markers.h  utility.cpp  utility.h
src/ED/: ED.cpp  ED.h  EDInternals.cpp  EDInternals.h  EDLines.cpp  EDLines.h  EdgeMap.h  GradientOperators.cpp  GradientOperators.h  GradientOperatorsCV.h  ImageSmooth.cpp  ImageSmooth.h  ImageSmoothCV.h  LineSegment.cpp  LineSegment.h  MyMath.cpp  MyMath.h  NFA.cpp  NFA.h  Timer.h  Utilities.cpp  Utilities.h  ValidateEdgeSegments.cpp  ValidateEdgeSegments.h
